Clean up the service layer and implement custom exceptions