@@ -6,7 +6,13 @@ import com.sardul3.sentinel_iam.application.dto.ApplicationMetadataResponse;
 import com.sardul3.sentinel_iam.application.dto.ApplicationUploadRequest;
 import com.sardul3.sentinel_iam.application.repository.ApplicationRepository;
 import com.sardul3.sentinel_iam.application.repository.UserRepository;
-import org.springframework.beans.factory.annotation.Autowired;
+import com.sardul3.sentinel_iam.application.exception.CsvFormatException;
+import com.sardul3.sentinel_iam.application.exception.CsvProcessingException;
+import com.sardul3.sentinel_iam.application.exception.DatabaseOperationException;
+import com.sardul3.sentinel_iam.application.exception.DuplicateUserException;
+import com.sardul3.sentinel_iam.config.CsvConfig;
+import lombok.AllArgsConstructor;
+import org.springframework.dao.DataAccessException;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
 
@@ -14,60 +20,76 @@ import java.io.BufferedReader;
 import java.io.InputStreamReader;
 import java.io.IOException;
 import java.util.List;
+import java.util.Map;
 import java.util.stream.Collectors;
+import java.util.stream.IntStream;
 
 @Service
+@AllArgsConstructor
 public class ApplicationService {
 
     private final ApplicationRepository applicationRepository;
     private final UserRepository userRepository;
-
-    @Autowired
-    public ApplicationService(ApplicationRepository applicationRepository, UserRepository userRepository) {
-        this.applicationRepository = applicationRepository;
-        this.userRepository = userRepository;
-    }
+    private final CsvConfig csvConfig;
 
     public Long processCsv(ApplicationUploadRequest metadata, MultipartFile file) {
-        Application application = applicationRepository.findByName(metadata.getApplicationName())
-                .orElseGet(() -> applicationRepository.save(new Application(metadata.getApplicationName(), metadata.getDepartment())));
-
-        try (BufferedReader reader = new BufferedReader(new InputStreamReader(file.getInputStream()))) {
-            String line;
-            boolean isHeader = true; // Skip the header row
-
-            while ((line = reader.readLine()) != null) {
-                line = line.trim(); // Trim any unwanted spaces
-
-                // Skip the header row
-                if (isHeader) {
-                    isHeader = false;
-                    continue;
-                }
-
-                // Skip empty lines
-                if (line.isEmpty()) {
-                    continue;
-                }
-
-                String[] data = line.split(",");
-
-                // Ensure there are exactly 3 elements (username, email, role)
-                if (data.length < 3) {
-                    throw new IllegalArgumentException("Invalid CSV format. Expected 3 columns: username, email, role. Found: " + data.length);
-                }
-
-                String username = data[0].trim();
-                String email = data[1].trim();
-                String role = data[2].trim();
-
-                User user = new User(null, username, email, role, application);
-                userRepository.save(user);
-            }
-        } catch (IOException e) {
-            throw new RuntimeException("Error processing file", e);
-        }
+        Application application = findOrCreateApplication(metadata);
+        processCsvFile(file, application);
         return application.getId();
+    }
+
+    private Application findOrCreateApplication(ApplicationUploadRequest metadata) {
+        try {
+            return applicationRepository.findByName(metadata.getApplicationName())
+                    .orElseGet(() -> applicationRepository.save(new Application(metadata.getApplicationName(), metadata.getDepartment())));
+        } catch (DataAccessException e) {
+            throw new DatabaseOperationException("Error accessing database while retrieving or saving application", e);
+        }
+    }
+
+    private void processCsvFile(MultipartFile file, Application application) {
+        try (BufferedReader reader = new BufferedReader(new InputStreamReader(file.getInputStream()))) {
+            reader.lines()
+                    .skip(1) // Skip the header
+                    .map(line -> parseCsvLine(line, csvConfig.getHeaders()))
+                    .map(data -> createUser(data, application))
+                    .forEach(userRepository::save);
+        } catch (IOException e) {
+            throw new CsvProcessingException("Error processing file", e);
+        } catch (DataAccessException e) {
+            throw new DatabaseOperationException("Error accessing database while saving users", e);
+        }
+    }
+
+    private Map<String, String> parseCsvLine(String line, List<String> headers) {
+        if (line == null || line.trim().isEmpty()) {
+            throw new CsvFormatException("Invalid CSV format: empty line");
+        }
+
+        String[] data = line.split(",");
+        if (data.length < headers.size()) {
+            throw new CsvFormatException("Invalid CSV format. Expected " + headers.size() + " columns. Found: " + data.length);
+        }
+
+        return IntStream.range(0, headers.size())
+                .boxed()
+                .collect(Collectors.toMap(headers::get, i -> data[i].trim()));
+    }
+
+    private User createUser(Map<String, String> data, Application application) {
+        String username = data.get("username");
+        String email = data.get("email");
+        String role = data.get("role");
+
+        if (!isValidEmail(email)) {
+            throw new CsvFormatException("Invalid email format: " + email);
+        }
+
+        if (userRepository.existsByUsernameAndApplication(username, application)) {
+            throw new DuplicateUserException("User with username '" + username + "' already exists for this application.");
+        }
+
+        return new User(username, email, role, application);
     }
 
     public List<ApplicationMetadataResponse> getAllApplications() {
@@ -77,6 +99,10 @@ public class ApplicationService {
                         app.getName(),
                         app.getDepartment(),
                         app.getUsers().size()
-                )).collect(Collectors.toList());
+                )).toList();
+    }
+
+    private boolean isValidEmail(String email) {
+        return email.matches("^[A-Za-z0-9+_.-]+@[A-Za-z0-9.-]+$");
     }
 }
